Start a basic request handler - just decodes and prints out an expense object when received.

--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,9 @@ runtime: go
 api_version: go1
 
 handlers:
+- url: /data
+  script: _go_app
+
 - url: /
   static_files: index.html
   upload: index\.html
